...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usif.detail.UserDetailActivity"
    android:id="@+id/detailLayout">

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
...
